welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:39: error: ';' expected but ',' found.
  droite(),move(3,true)
          ^